--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <h3>Freelance Editor</h3>
             <p><strong>Type:</strong> Self-employed</p>
             <p><strong>Role:</strong> Remote video editing and content polishing for clients</p>
-            <span class="timeline-date">Jul 2020 – Present</span>
+            <span class="timeline-date">Jul 2020 – 2021</span>
           </div>
         </div>
 
@@ -188,3 +188,4 @@
 
 </body>
 </html>
+
